gpu: mediatek: Include mali base drivers
Change-Id: I9db51c57cda741e0f991866614d0a9702ab9e1a2

--- a/drivers/gpu/mediatek/gpu_mali/mali_valhall/mali-r38p1/drivers/gpu/arm/midgard/Makefile
+++ b/drivers/gpu/mediatek/gpu_mali/mali_valhall/mali-r38p1/drivers/gpu/arm/midgard/Makefile
@@ -18,7 +18,8 @@
 #
 #
 
-ifeq ($(BUILD_RULE),OOT)
+MTK_PLATFORM_VERSION := $(CONFIG_MTK_PLATFORM:"%"=%)
+    
     ifeq ($(MTK_PLATFORM_VERSION),mt6983)
         MTK_GPU_VERSION := $(LOCAL_MTK_GPU_VERSION)
         MTK_PLATFORM := $(MTK_PLATFORM_VERSION)
@@ -152,7 +153,6 @@ ifeq ($(BUILD_RULE),OOT)
         CONFIG_MALI_MTK_DIAGNOSIS_MODE := y
     endif ## mt6835 ##
 
-endif
 
 # make $(src) as absolute path if it is not already, by prefixing $(srctree)
 # This is to prevent any build issue due to wrong path.
