--- a/drivers/gpu/mediatek/Kconfig
+++ b/drivers/gpu/mediatek/Kconfig
@@ -11,8 +11,8 @@ config MTK_GPU_VERSION
 	default ""
 	help
 	  CONFIG_MTK_GPU_VERSION define which gpu ddk version will be used
-	  It has three parts
-	  1.vendor name 2.GPU architecture name 3. driver version
+	  It has four parts
+	  1.vendor name 2.GPU architecture name 3. driver version 4. CPU platform name
 
 config MTK_GPU_COMMON_DVFS_SUPPORT
 	bool "Support GPU VSync-Based DVFS Policy"
