--- a/arch/arm64/configs/mgk_64_k515_defconfig
+++ b/arch/arm64/configs/mgk_64_k515_defconfig
@@ -2,6 +2,11 @@ CONFIG_BUILD_CONFIG_FILE="build.config.mtk.aarch64"
 CONFIG_MODULE_SIG_KEY="certs/mtk_signing_key.pem"
 # CONFIG_MODULE_SIG_ALL is not set
 CONFIG_ARCH_MEDIATEK=y
+CONFIG_MTK_PLATFORM="mt6886"
+CONFIG_ARCH_MTK_PROJECT="k6886v1_64"
+CONFIG_MTK_DTBO_FEATURE=y
+CONFIG_BUILD_ARM64_DTB_IMAGE_NAMES="mediatek/mt6886"
+CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/k6886v1_64"
 CONFIG_ABI_MONITOR=y
 CONFIG_MTK_TIMER=m
 CONFIG_MTK_CLKBUF=m
