config: Enable mali base modules
Signed-off-by: AbzRaider <99021451+AbzRaider@users.noreply.github.com>

--- a/arch/arm64/configs/pacman.config
+++ b/arch/arm64/configs/pacman.config
@@ -259,6 +259,8 @@ CONFIG_MTK_GPU_MT6985_SUPPORT=m
 CONFIG_MTK_GPUFREQ_V2=y
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 CONFIG_MTK_GPU_VERSION="mali valhall r38p1 mt6886"
+CONFIG_MALI_BASE_MODULES=y
+# CONFIG_DMA_SHARED_BUFFER_TEST_EXPORTER is not set
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5kgn9_mipi_raw s5kgn9stech_mipi_raw imx615_mipi_raw s5kjn1_mipi_raw"
 CONFIG_MTK_IMGSENSOR=m
 CONFIG_MTK_SECURITY_SW_SUPPORT=m
