defconfig: Enable development selinux config

--- a/arch/arm64/configs/pacman.config
+++ b/arch/arm64/configs/pacman.config
@@ -714,3 +714,5 @@ CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
 # enable scp
 CONFIG_MTK_TINYSYS_SCP_DEBUG_SUPPORT=y
+# selinux-dev config (Allow Permissive Selinux Mode)
+CONFIG_SECURITY_SELINUX_DEVELOP=y
