--- a/drivers/misc/mediatek/connectivity/Makefile
+++ b/drivers/misc/mediatek/connectivity/Makefile
@@ -45,6 +45,16 @@ ifneq ($(KERNELRELEASE),)
 
     # Do build-in for Makefile checking
     # export CONFIG_WLAN_DRV_BUILD_IN=y
+    # for gen4m options
+    export CONFIG_MTK_COMBO_WIFI_HIF=axi
+    export MTK_COMBO_CHIP=CONNAC2X2_SOC7_0
+    export BT_PLATFORM=6886
+    export CONFIG_WLAN_PLATFORM=6886
+    export WLAN_CHIP_ID=6886
+    export MTK_ANDROID_WMT=y
+    export MTK_ANDROID_EMI=y
+    export WIFI_IP_SET=1
+    export MTK_WLAN_SERVICE=yes
 
     ifeq ($(CONFIG_WLAN_DRV_BUILD_IN),y)
         PATH_TO_WMT_DRV      = vendor/mediatek/kernel_modules/connectivity/common
@@ -88,6 +98,8 @@ ifneq ($(KERNELRELEASE),)
 
     obj-$(CONFIG_MTK_COMBO) += common/
     obj-$(CONFIG_MTK_COMBO_WIFI) += wlan/adaptor/
+    obj-$(CONFIG_MTK_COMBO_CHIP_CONSYS_6886) += wlan/core/gen4m/
+    obj-$(CONFIG_MTK_BTIF) += bt/mt66xx/wmt/
     obj-$(CONFIG_MTK_COMBO_GPS) += gps/gps_pwr/
     obj-$(CONFIG_MTK_COMBO_GPS) += gps/gps_stp/
     obj-$(CONFIG_MTK_FMRADIO) += fmradio/
