--- a/drivers/misc/mediatek/connectivity/Makefile
+++ b/drivers/misc/mediatek/connectivity/Makefile
@@ -44,7 +44,7 @@ ifneq ($(KERNELRELEASE),)
 
 
     # Do build-in for Makefile checking
-    # export CONFIG_WLAN_DRV_BUILD_IN=y
+    export CONFIG_WLAN_DRV_BUILD_IN=y
     # for gen4m options
     export CONFIG_MTK_COMBO_WIFI_HIF=axi
     export MTK_COMBO_CHIP=CONNAC2X2_SOC7_0
